default to 1080p playback

--- a/docs/_includes/youtube.html
+++ b/docs/_includes/youtube.html
@@ -1,6 +1,6 @@
 <div class="embed-container">
     <iframe width="640" height="390" 
-    src="https://www.youtube.com/embed/{{ include.id }}" 
+    src="https://www.youtube.com/embed/{{ include.id }}&vq=hd1080p" 
     frameborder="0" allowfullscreen></iframe>
 </div>
 <style>
